--- a/index.html
+++ b/index.html
@@ -9,10 +9,36 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Collab Practice</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+    <nav class="container-fluid row justify-content-between bg-light">
+      <li class="col">Home</li>
+      <li class="col">Columns</li>
+      <li class="col">Contact Me</li>
+    </nav>
+
+    <!-- Simple Nav, plan to have on-click link -->
+   
+    <div class="container justify-content-around bg-body">
+      <div class="row">
+        <div class="col my-grad-1"> 
+          Column
+        </div>
+        <div class="col my-grad-2">
+          Column
+        </div>
+      </div>
+    </div>
+
+    <!-- Containers will have gradient bg-colors -->
+
+    <footer class="row bg-dark text-white col text-center">
+      <p>&copy;Max Agress Inc.</p>
+    </footer>
+
+    <!-- Need link to your github -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
