Set up basic jumbotron.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
         <a href="#" class="nav-link">Footer</a>
       </li>
     </nav>
+
+    <div class="jumbotron text-center myJumbo">
+      <div class="container-fluid">
+        <h1 class="display-5">Test Jumbotron</h1>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <hr class="my-5">
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+    </div>
    
     <div class="container-fluid justify-content-around bg-body">
       <div class="row">
